--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <nav class="navbar">
+        <a  class="nav" target="_blank" href="">About</a>
+        <a class="nav" target="_blank" href="">Work</a>
+        <a class="nav" target="_blank" href="">Protfolio</a>
+        <a class="nav" target="_blank" href="">Contact</a>
+    </nav>
+    <section class="top-banner">
+        <h1>Hello, I'm</h1>
+        <h1 class="text-hightlighter">Rob Davidson</h1>
+    </section>
 </body>
 </html>
