added about and project area

--- a/index.html
+++ b/index.html
@@ -15,8 +15,50 @@
         <a class="nav" target="_blank" href="">Contact</a>
     </nav>
     <section class="top-banner">
-        <h1>Hello, I'm</h1>
+        <div class="half-width">
+            <h1 style="color: rgba(54, 57, 88, 1);">Hello, I'm</h1>
         <h1 class="text-hightlighter">Rob Davidson</h1>
+        <p>
+            A full stack allaround designer that placerat
+            in massa consectetur
+        </p>
+        <a class="link-button" target="_blank" href="http://linkedin.com">Hire Me</a>
+    </div>
+        <div class="half-width">
+            <img src="images/prf1.png" alt="">
+        </div>
+    </section>
+    <section class="about-area">
+        <div class="half-width">
+            <img src="images/prf2.png" alt="">
+        </div>
+        <div class="half-width"><h2>ABOUT</h2>
+            <P>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            </P>
+            <a class="link-button" target="_blank" href="http://linkedin.com">Download CV</a></div>
+    </section>
+    <section class="project-area">
+        <h2><span class="text-hightlighter">Latest</span> Working Project </h2>
+        <div class="projects">
+            <div class="blog">
+                <img src="images/image 5.png">
+                <h3>Power-x-gym (gym website)</h3>
+                <p>Lorem Ipsum is simply dummy text of the 
+                    printing and typesetting industry.</p>
+            </div>
+            <div class="blog">
+                <img src="images/image 5.png">
+                <h3>Power-x-gym (gym website)</h3>
+                <p>Lorem Ipsum is simply dummy text of the 
+                    printing and typesetting industry.</p>
+            </div>
+            <div class="blog">
+                <img src="images/image 5.png">
+                <h3>Power-x-gym (gym website)</h3>
+                <p>Lorem Ipsum is simply dummy text of the 
+                    printing and typesetting industry.</p>
+            </div>
+        </div>
     </section>
 </body>
 </html>
