--- a/index.html
+++ b/index.html
@@ -60,5 +60,17 @@
             </div>
         </div>
     </section>
+    <section class="work-area"> 
+        <img src="shapes/Group_33094_1.png" alt="">
+       <div class="work-inquiry">
+      <div class="work-half-width">
+        <h3>WORK INQUIRY</h3>
+        
+      </div>
+      <div class="work-half-width">
+        <a class="link-button" target="_blank" href="http://linkedin.com">Let's Chat</a>
+      </div>
+       </div>
+    </section>
 </body>
 </html>
