--- a/index.html
+++ b/index.html
@@ -67,10 +67,31 @@
         <h3>WORK INQUIRY</h3>
         
       </div>
-      <div class="work-half-width">
-        <a class="link-button" target="_blank" href="http://linkedin.com">Let's Chat</a>
+      <div class="work-half-width work-button">
+        <a class="link-button " target="_blank" href="http://linkedin.com">Let's Chat</a>
       </div>
        </div>
     </section>
+    <section class="experienc-area ">
+        <h2>Experience</h2>
+        <div id="full-stack"; class="half-width single-experience" >
+            <h2>Full Stack Web Dev</h2>
+            <h3 class="text-hightlighter">2022-2023</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa necessitatibus vitae exercitationem sapiente. Aliquam, eaque vero. Perspiciatis aperiam at amet voluptatum soluta, vitae fuga sint nam cupiditate quaerat quasi omnis.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa necessitatibus vitae exercitationem sapiente. Aliquam, eaque vero. Perspiciatis aperiam at amet voluptatum soluta, vitae fuga sint nam cupiditate quaerat quasi omnis.</p>
+        </div>
+        <div class="half-width single-experience " id="baby-webdev">
+            <h2>Baby Web Dev</h2>
+            <h3 class="text-hightlighter">2020-2021</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa necessitatibus vitae exercitationem sapiente. Aliquam, eaque vero. Perspiciatis aperiam at amet voluptatum soluta, vitae fuga sint nam cupiditate quaerat quasi omnis.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa necessitatibus vitae exercitationem sapiente. Aliquam, eaque vero. Perspiciatis aperiam at amet voluptatum soluta, vitae fuga sint nam cupiditate quaerat quasi omnis.
+           </p>
+        </div>
+    </section>
+    <footer>
+        <h5>STAY CONNECTED</h5>
+        <h3>hello@design.com</h3>
+        <img src="icons/image 6.png" alt="">
+        <img src="icons/Group 33059.png" alt="">
+        <img src="icons/image 7.png" alt="">
+    </footer>
 </body>
 </html>
